--- a/AquaintDemoLive/AquaintDemoLive.csproj
+++ b/AquaintDemoLive/AquaintDemoLive.csproj
@@ -39,6 +39,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="AcquaintDemoLive.apk" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
